Commit: Correcciones de ortografía

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -103,10 +103,10 @@
           <img src="../img/logo.png" class="logo" alt="" />
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+          <h6 class="text-uppercase text-warning">Sobre nosotros</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
-              <a class="nav-link" href="vision.html">Nuestra Visión</a>
+              <a class="nav-link" href="vision.html">Nuestra visión</a>
             </li>
             <li class="text">
               <a class="nav-link" href="#">Noticias</a>
@@ -117,7 +117,7 @@
           </ul>
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+          <h6 class="text-uppercase text-warning">Obtener ayuda</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
               <a class="nav-link" href="#">Pedidos</a>
