--- a/pages/producto.html
+++ b/pages/producto.html
@@ -135,7 +135,7 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    Hemos añadido tu producto al carrito de compras
+                    Hemos añadido tu producto al carrito de compras.
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Continuar</button>
