Agregar Carrito de comprar, con su eliminar producto

--- a/pages/carro.html
+++ b/pages/carro.html
@@ -80,10 +80,8 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col-lg-12 col-md-12 col-12">
-                        <h3 class="display-5 mb-2 text-center">Carro de Compras</h3>
-                        <p class="mb-5 text-center">
-                            <i class="text-info font-weight-bold">3</i> productos en el carro
-                        </p>
+                        <h3 class="display-5 mb-5 text-center">Carro de Compras</h3>
+
                         <table id="shoppingCart" class="table table-condensed table-responsive">
                             <thead>
                                 <tr>
@@ -93,14 +91,10 @@
                                     <th style="width:16%"></th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
+                            <tbody id="listaCarro">
+                                <tr >
                                     <td data-th="Product">
                                         <div class="row">
-                                            <div class="col-md-3 text-left">
-                                                <img src="https://via.placeholder.com/250" alt=""
-                                                    class="img-fluid d-none d-md-block rounded mb-2 shadow ">
-                                            </div>
                                             <div class="col-md-9 text-left mt-sm-2">
                                                 <h4>Producto</h4>
                                                 <p class="font-weight-light">Marca del producto</p>
@@ -122,67 +116,12 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td data-th="Product">
-                                        <div class="row">
-                                            <div class="col-md-3 text-left">
-                                                <img src="https://via.placeholder.com/250" alt=""
-                                                    class="img-fluid d-none d-md-block rounded mb-2 shadow ">
-                                            </div>
-                                            <div class="col-md-9 text-left mt-sm-2">
-                                                <h4>Producto</h4>
-                                                <p class="font-weight-light">Marca del producto</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td data-th="Price">$999</td>
-                                    <td data-th="Quantity">
-                                        <input type="number" class="form-control form-control-lg text-center" value="1">
-                                    </td>
-                                    <td class="actions" data-th="">
-                                        <div class="text-right">
-                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                                <i class="fas fa-sync"></i>
-                                            </button>
-                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                                <i class="fas fa-trash"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td data-th="Product">
-                                        <div class="row">
-                                            <div class="col-md-3 text-left">
-                                                <img src="https://via.placeholder.com/250" alt=""
-                                                    class="img-fluid d-none d-md-block rounded mb-2 shadow ">
-                                            </div>
-                                            <div class="col-md-9 text-left mt-sm-2">
-                                                <h4>Producto</h4>
-                                                <p class="font-weight-light">Marca del producto</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td data-th="Price">$999</td>
-                                    <td data-th="Quantity">
-                                        <input type="number" class="form-control form-control-lg text-center" value="1">
-                                    </td>
-                                    <td class="actions" data-th="">
-                                        <div class="text-right">
-                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                                <i class="fas fa-sync"></i>
-                                            </button>
-                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                                <i class="fas fa-trash"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
+
                             </tbody>
                         </table>
                         <div class="float-right text-right">
                             <h4>Total Parcial:</h4>
-                            <h1>$9999</h1>
+                            <h1 id="total">$9999</h1>
                             <small>+ Coste de envío: $100</small>
                         </div>
                     </div>
@@ -192,7 +131,7 @@
                         <a href="#" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Comprar</a>
                     </div>
                     <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-left">
-                        <a href="../index.html">
+                        <a id="volver">
                             <i class="fas fa-arrow-left mr-2"></i> Continuar Comprando</a>
                     </div>
                 </div>
@@ -261,8 +200,10 @@
             crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js"
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script type="module" src="../js/getCarroNavbar.js"></script>
+        <script type="module" src="../js/refresCarro.js"></script>
         <script src="../js/getCarro.js"></script>
-        <script src="../js/getCarroNavbar.js"></script>
+
 </body>
 
 </html>
