--- a/pages/producto.html
+++ b/pages/producto.html
@@ -145,7 +145,7 @@
               </div>
             </div>
             <!-- Fin modal agregar carro-->
-            <a role="button" class="btn btn-outline-dark my-2" onclick="volver()">
+            <a role="button" class="btn btn-outline-dark my-2" id="volver">
               Seguir Comprando</a>
             <div class="container">
               <div id="accordion">
