--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -225,8 +225,10 @@
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
   <script type="module" src="../js/getCarroNavbar.js"></script>
   <script type="module" src="../js/refresCarro.js"></script>
+  <script src="../js/validarRegistro.js"></script>
 </body>
 
 </html>
