Cambio de texto en Registro de Usuario

--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -86,11 +86,7 @@
             <!--Titulo de Formulario, Instrucciones de Formulario-->
             <h3 class="register-heading">Registrar usuario</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-              a elit nec tellus consequat accumsan ac sit amet elit. Nullam
-              maximus tellus quis tortor feugiat, nec gravida neque
-              scelerisque. Sed volutpat nisl rutrum lobortis lobortis.
-              Curabitur molestie metus eu dolor bibendum congue.
+              Ingrese sus datos en el siguiente formulario, y presione el botón de confirmar. Al crear una cuenta de usuario acepta los términos y condiciones de la tienda online ChangeWear.
             </p>
             <form method="POST" id="formularioRegistro">
               <div class="row register-form">
