--- a/pages/producto.html
+++ b/pages/producto.html
@@ -125,7 +125,7 @@
             </a>
             <!-- Modal de agregar al carro -->
             <div class="modal fade" id="modalAgregar" tabindex="-1" aria-labelledby="modalAgregarLabel"
-              aria-hidden="true">
+              aria-hidden="true" aria-setsize="300px">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -139,7 +139,7 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Continuar</button>
-                    <a type="button" class="btn btn-primary" href="carro.html">Pagar</a>
+                    <a type="button" class="btn btn-primary"    href="carro.html">Pagar</a>
                   </div>
                 </div>
               </div>
