--- a/pages/vision.html
+++ b/pages/vision.html
@@ -85,9 +85,7 @@
         <h2 class="font-weight-light">Acerca de Nosotros</h2>
       </div>
       <div class="container my-2 text-justify">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur tenetur doloribus consectetur est quod,
-        fugiat aperiam iure vero aut obcaecati numquam perferendis aspernatur porro a magni iusto. Praesentium ea hic,
-        accusamus error quos nulla!
+        Somos unos emprendedores comprometidos en entregar un alto standar en nuestros productos, ofreciendo calidad , oferta y buenas marcas.
       </div>
     </div>
     <div class="container d-flex justify-content-center my-2">
@@ -103,8 +101,7 @@
               <h4>Calidad</h4>
               <p class="pa"></p>
               <p class="text-justify">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. At harum beatae eligendi molestias consequatur
-                nobis.
+                Ofrecemos la mejor calidad de textiles a los mejores precios del mercado, nuestra garantia es siempre entregar calidad y estilos adaptados al dia de hoy.
               </p>
             </div>
           </div>
@@ -115,8 +112,7 @@
               <h4>Compromiso ecológico</h4>
               <p class="pa"></p>
               <p class="text-justify">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. At harum beatae eligendi molestias consequatur
-                nobis.
+                Trabajamos con proveedores que velan en diseñar sus textiles amigables para el medio ambiente.
               </p>
             </div>
           </div>
